--- a/MagicParser/MagicParser.csproj
+++ b/MagicParser/MagicParser.csproj
@@ -42,12 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Construct.cs" />
+    <Compile Include="Nodes\LeafNode.cs" />
+    <Compile Include="Nodes\Node.cs" />
+    <Compile Include="Nodes\INode.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="ParserException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rules\BaseRule.cs" />
+    <Compile Include="Rules\CardList.cs" />
+    <Compile Include="Rules\ListRule.cs" />
+    <Compile Include="Rules\RegexRule.cs" />
     <Compile Include="Rules\EntersRule.cs" />
     <Compile Include="Rules\IRule.cs" />
     <Compile Include="Rules\WhenRule.cs" />
