--- a/MagicParser/MagicParser.csproj
+++ b/MagicParser/MagicParser.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rules\CardRule.cs" />
     <Compile Include="Rules\ControlsRule.cs" />
+    <Compile Include="Rules\DamageThatWouldReduceYourLifeRule.cs" />
     <Compile Include="Rules\ForEachRule.cs" />
     <Compile Include="Rules\GainLifeRule.cs" />
     <Compile Include="Rules\KeywordRule.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="Rules\EntersRule.cs" />
     <Compile Include="Rules\IRule.cs" />
     <Compile Include="Rules\SubtypeRule.cs" />
+    <Compile Include="Rules\UntilEndOfTurnRule.cs" />
     <Compile Include="Rules\WhenRule.cs" />
     <Compile Include="Rules\ZoneRule.cs" />
   </ItemGroup>
