--- a/MagicParser/MagicParser.csproj
+++ b/MagicParser/MagicParser.csproj
@@ -45,7 +45,6 @@
     <Compile Include="Nodes\LeafNode.cs" />
     <Compile Include="Nodes\Node.cs" />
     <Compile Include="Nodes\INode.cs" />
-    <Compile Include="Nodes\RootNode.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="ParserException.cs" />
     <Compile Include="Program.cs" />
@@ -57,6 +56,7 @@
     <Compile Include="Rules\GainLifeRule.cs" />
     <Compile Include="Rules\KeywordRule.cs" />
     <Compile Include="Rules\ListRule.cs" />
+    <Compile Include="Rules\MultilineRule.cs" />
     <Compile Include="Rules\NumberRule.cs" />
     <Compile Include="Rules\PlayerRule.cs" />
     <Compile Include="Rules\RegexRule.cs" />
