--- a/MagicParser/MagicParser.csproj
+++ b/MagicParser/MagicParser.csproj
@@ -49,13 +49,18 @@
     <Compile Include="ParserException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rules\AbilityRule.cs" />
     <Compile Include="Rules\CardRule.cs" />
     <Compile Include="Rules\ControlsRule.cs" />
+    <Compile Include="Rules\CostRule.cs" />
     <Compile Include="Rules\DamageThatWouldReduceYourLifeRule.cs" />
+    <Compile Include="Rules\ExileRule.cs" />
     <Compile Include="Rules\ForEachRule.cs" />
     <Compile Include="Rules\GainLifeRule.cs" />
     <Compile Include="Rules\KeywordRule.cs" />
+    <Compile Include="Rules\LifeTotalBecomesRule.cs" />
     <Compile Include="Rules\ListRule.cs" />
+    <Compile Include="Rules\ManaCostRule.cs" />
     <Compile Include="Rules\MultilineRule.cs" />
     <Compile Include="Rules\NumberRule.cs" />
     <Compile Include="Rules\PlayerRule.cs" />
