--- a/MagicParser/MagicParser.csproj
+++ b/MagicParser/MagicParser.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rules\AbilityRule.cs" />
+    <Compile Include="Rules\AnyRule.cs" />
+    <Compile Include="Rules\AttacksAloneRule.cs" />
     <Compile Include="Rules\CardRule.cs" />
     <Compile Include="Rules\ControlsRule.cs" />
     <Compile Include="Rules\CostRule.cs" />
@@ -57,19 +59,28 @@
     <Compile Include="Rules\ExileRule.cs" />
     <Compile Include="Rules\ForEachRule.cs" />
     <Compile Include="Rules\GainLifeRule.cs" />
+    <Compile Include="Rules\GetsRule.cs" />
+    <Compile Include="Rules\IsRule.cs" />
     <Compile Include="Rules\KeywordRule.cs" />
     <Compile Include="Rules\LifeTotalBecomesRule.cs" />
     <Compile Include="Rules\ListRule.cs" />
     <Compile Include="Rules\ManaCostRule.cs" />
     <Compile Include="Rules\MultilineRule.cs" />
+    <Compile Include="Rules\NumberOfRule.cs" />
     <Compile Include="Rules\NumberRule.cs" />
     <Compile Include="Rules\PlayerRule.cs" />
     <Compile Include="Rules\RegexRule.cs" />
     <Compile Include="Rules\EntersRule.cs" />
     <Compile Include="Rules\IRule.cs" />
+    <Compile Include="Rules\RelativeTargetRule.cs" />
+    <Compile Include="Rules\StatModifierRule.cs" />
     <Compile Include="Rules\SubtypeRule.cs" />
+    <Compile Include="Rules\TypeRule.cs" />
     <Compile Include="Rules\UntilEndOfTurnRule.cs" />
+    <Compile Include="Rules\VariableRule.cs" />
+    <Compile Include="Rules\WheneverRule.cs" />
     <Compile Include="Rules\WhenRule.cs" />
+    <Compile Include="Rules\WhereRule.cs" />
     <Compile Include="Rules\ZoneRule.cs" />
   </ItemGroup>
   <ItemGroup>
