--- a/MagicParser/MagicParser.csproj
+++ b/MagicParser/MagicParser.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rules\AbilityRule.cs" />
     <Compile Include="Rules\AddendumRule.cs" />
+    <Compile Include="Rules\AllRule.cs" />
     <Compile Include="Rules\AnyRule.cs" />
     <Compile Include="Rules\AttacksAloneRule.cs" />
     <Compile Include="Rules\CardRule.cs" />
@@ -73,11 +74,11 @@
     <Compile Include="Rules\NumberRule.cs" />
     <Compile Include="Rules\OrGreaterRule.cs" />
     <Compile Include="Rules\PlayerRule.cs" />
-    <Compile Include="Rules\PluralTypeRule.cs" />
     <Compile Include="Rules\PowerSatisfiesRule.cs" />
     <Compile Include="Rules\RegexRule.cs" />
     <Compile Include="Rules\EntersRule.cs" />
     <Compile Include="Rules\IRule.cs" />
+    <Compile Include="Rules\ReplacementRule.cs" />
     <Compile Include="Rules\SimpleRule.cs" />
     <Compile Include="Rules\ThatRule.cs" />
     <Compile Include="Rules\RelativeTargetRule.cs" />
