Added support for Expose to Daylight (RNA).

--- a/MagicParser/MagicParser.csproj
+++ b/MagicParser/MagicParser.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Rules\ControlsRule.cs" />
     <Compile Include="Rules\CostRule.cs" />
     <Compile Include="Rules\DamageThatWouldReduceYourLifeRule.cs" />
+    <Compile Include="Rules\DestroyRule.cs" />
     <Compile Include="Rules\ExileFromRule.cs" />
     <Compile Include="Rules\ExileRule.cs" />
     <Compile Include="Rules\ForEachRule.cs" />
@@ -70,16 +71,20 @@
     <Compile Include="Rules\ListRule.cs" />
     <Compile Include="Rules\ManaCostRule.cs" />
     <Compile Include="Rules\MultilineRule.cs" />
+    <Compile Include="Rules\MultipartRule.cs" />
     <Compile Include="Rules\NumberOfRule.cs" />
     <Compile Include="Rules\NumberRule.cs" />
     <Compile Include="Rules\OrGreaterRule.cs" />
+    <Compile Include="Rules\OrRule.cs" />
     <Compile Include="Rules\PlayerRule.cs" />
     <Compile Include="Rules\PowerSatisfiesRule.cs" />
     <Compile Include="Rules\RegexRule.cs" />
     <Compile Include="Rules\EntersRule.cs" />
     <Compile Include="Rules\IRule.cs" />
     <Compile Include="Rules\ReplacementRule.cs" />
+    <Compile Include="Rules\ScryRule.cs" />
     <Compile Include="Rules\SimpleRule.cs" />
+    <Compile Include="Rules\SplitRule.cs" />
     <Compile Include="Rules\ThatRule.cs" />
     <Compile Include="Rules\RelativeTargetRule.cs" />
     <Compile Include="Rules\StatModifierRule.cs" />
