--- a/MagicParser/MagicParser.csproj
+++ b/MagicParser/MagicParser.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Rules\AllRule.cs" />
     <Compile Include="Rules\AnyRule.cs" />
     <Compile Include="Rules\AttacksAloneRule.cs" />
+    <Compile Include="Rules\CannotAttack.cs" />
     <Compile Include="Rules\CardRule.cs" />
     <Compile Include="Rules\ControlsRule.cs" />
     <Compile Include="Rules\CostRule.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Rules\NumberRule.cs" />
     <Compile Include="Rules\OrGreaterRule.cs" />
     <Compile Include="Rules\OrRule.cs" />
+    <Compile Include="Rules\PaysRule.cs" />
     <Compile Include="Rules\PlayerRule.cs" />
     <Compile Include="Rules\PowerSatisfiesRule.cs" />
     <Compile Include="Rules\RegexRule.cs" />
@@ -90,8 +92,11 @@
     <Compile Include="Rules\StatModifierRule.cs" />
     <Compile Include="Rules\SubtypeRule.cs" />
     <Compile Include="Rules\TargetRule.cs" />
+    <Compile Include="Rules\ThoseRule.cs" />
     <Compile Include="Rules\TypeRule.cs" />
+    <Compile Include="Rules\UnlessRule.cs" />
     <Compile Include="Rules\UntilEndOfTurnRule.cs" />
+    <Compile Include="Rules\UntilYourNextTurnRule.cs" />
     <Compile Include="Rules\VariableRule.cs" />
     <Compile Include="Rules\WheneverRule.cs" />
     <Compile Include="Rules\WhenRule.cs" />
