--- a/MagicParser/MagicParser.csproj
+++ b/MagicParser/MagicParser.csproj
@@ -44,6 +44,16 @@
   <ItemGroup>
     <Compile Include="LexerException.cs" />
     <Compile Include="MagicLexer.cs" />
+    <Compile Include="MagicParser.cs" />
+    <Compile Include="Nodes\ActionNode.cs" />
+    <Compile Include="Nodes\ConstantNode.cs" />
+    <Compile Include="Nodes\ControlsNode.cs" />
+    <Compile Include="Nodes\ForEachNode.cs" />
+    <Compile Include="Nodes\INode.cs" />
+    <Compile Include="Nodes\MultilineNode.cs" />
+    <Compile Include="Nodes\ResourceNode.cs" />
+    <Compile Include="Nodes\TriggeredAbilityNode.cs" />
+    <Compile Include="ParserException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tokens\ActionToken.cs" />
